# napari-ml-particle-tracking

./: .gitignore  LICENSE  README.md  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/models/: model_final.pt
src/napari_ml_particle_tracking/: __init__.py  _base_widget.py  _intensity_plot.py  _plots.py  _segmentation_widget.py  _table_widget.py  _track_filter.py  _tracking_widget.py  _widget.py  napari.yaml
src/napari_ml_particle_tracking/_tests/: test_widget.py
