[metadata]
name = napari-ml-particle-tracking
version = attr: napari_ml_particle_tracking.__version__
description = Machine Learning based Particle Tracking plugin.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zeroth/napari-ml-particle-tracking
author = Abhishek Patil
author_email = abhishek@zeroth
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/zeroth/napari-ml-particle-tracking/issues
    Documentation = https://github.com/zeroth/napari-ml-particle-tracking#README.md
    Source Code = https://github.com/zeroth/napari-ml-particle-tracking
    User Support = https://github.com/zeroth/napari-ml-particle-tracking/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy
    particle-tracking @ git+https://github.com/zeroth/particle-tracking.git@main

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-ml-particle-tracking = napari_ml_particle_tracking:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
